# puredata.py

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml  publish.yml
docs/: index.md  integrations.md  plugins.md
docs/tutorials/: advanced.md  beginner.md
puredata/: __init__.py  api.py  cli.py  dashboard.py  pipeline.py
puredata/core/: __init__.py  clean.py  report.py  watch.py
puredata/integrations/: __init__.py  dvc.py  mlflow.py  wandb.py
puredata/plugins/: __init__.py  base.py
tests/: conftest.py  test_clean.py  test_cli.py  test_dashboard.py  test_edge_cases.py  test_pipeline.py  test_plugins.py  test_watch.py
