[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "puredatalib"
version = "0.1.0"
description = "Automatic data cleaning and silent incompatibility detection for Python"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Vignesh", email = "applemacbook6sep2004@gmail.com" }]
keywords = [
    "data cleaning",
    "data validation",
    "data quality",
    "machine learning",
    "pandas",
    "outlier detection",
    "data drift",
    "data contracts",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "scipy>=1.9.0",
    "scikit-learn>=1.1.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "jinja2>=3.1.0",
    "python-dateutil>=2.8.0",
    "chardet>=5.0.0",
    "rapidfuzz>=3.0.0",
    "joblib>=1.2.0",
]

[project.optional-dependencies]
polars = ["polars>=0.19.0"]
mlflow = ["mlflow>=2.0.0"]
wandb = ["wandb>=0.15.0"]
dvc = ["dvc>=3.0.0"]
all = [
    "polars>=0.19.0",
    "mlflow>=2.0.0",
    "wandb>=0.15.0",
    "dvc>=3.0.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis>=6.82.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pandas-stubs>=2.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.23.0",
]

[project.urls]
Homepage = "https://vignesh2027.github.io/puredata"
Documentation = "https://github.com/vignesh2027/puredata.py#readme"
Repository = "https://github.com/vignesh2027/puredata.py.git"
"Bug Tracker" = "https://github.com/vignesh2027/puredata.py/issues"
Changelog = "https://github.com/vignesh2027/puredata.py/blob/main/CHANGELOG.md"

[project.scripts]
puredata = "puredata.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["puredata"]

[tool.hatch.build.targets.sdist]
include = ["/puredata", "/tests", "README.md", "CHANGELOG.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=puredata --cov-report=term-missing --cov-report=html --cov-fail-under=90"

[tool.coverage.run]
source = ["puredata"]
omit = ["tests/*", "puredata/integrations/*"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
